--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimary"
         android:gravity="center"
         android:textColor="#fff"
         android:textSize="18sp"
