--- a/app/src/main/res/layout/include_test.xml
+++ b/app/src/main/res/layout/include_test.xml
@@ -8,6 +8,7 @@
         android:id="@+id/tv_include"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
+        android:gravity="center"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
